--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  <img src="https://i.imgur.com/VIsVJBF.jpeg">
+  <img src="https://i.imgur.com/oeN3Z93.jpg" alt="Beautiful lake in Montana">
+  <img src="https://i.imgur.com/B4F7bPd.jpg" alt="Forgive your younger self..." title="inspirational quote">
 </body>
 </html>
